--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
 {% block nav %}
 
 
-    <nav class="navbar is-black is-fixed-top" role="navigation" aria-label="main navigation">
+    <nav class="navbar is-white is-fixed-top" role="navigation" aria-label="main navigation">
         <div class="container">
             <div class="navbar-brand">
                 <a class="navbar-item has-text-weight-bold" href="/"><img src="/logo.png"></a>
