--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -8,8 +8,12 @@
     background-size: cover;
 }
 
-.navbar.is-black {
-    background-color: rgba(0, 0, 0, .80) !important;
+.navbar.is-white {
+    background-color: rgba(255, 255, 255, 0.8) !important;
     backdrop-filter: saturate(180%) blur(20px);
     -webkit-backdrop-filter: saturate(180%) blur(20px);
+}
+
+.navbar img {
+    filter: brightness(0);
 }
