Fix commenting error

--- a/templates/customer/marketplace.html
+++ b/templates/customer/marketplace.html
@@ -168,9 +168,9 @@
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div> 
 
-    </section>
+    </section>-->
 
     <section class='section'>
         <div class='container'>
