For F*** sake. Please stop putting boxes over everything humanly possible.

--- a/templates/customer/tourListing.html
+++ b/templates/customer/tourListing.html
@@ -49,7 +49,7 @@
 <section class="section" style="">
     <div class="container">
 
-        <div class='box'>
+        <!-- <div class='box'>
             <h1 class='title has-text-centered'>Tour Itinerary</h1>
             <div class='timeline is-centered'>
                 <header class="timeline-header">
@@ -73,12 +73,11 @@
                     <span class="tag is-medium is-primary">End</span>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!--Start of review cards-->
-        <div class="box">
-            <h1 class='title has-text-centered'>Tour Reviews</h1>
-            <article class="media">
+            <h1 class='title'>Reviews for this tour</h1>
+            <article class="media box">
                 <div class="media-left">
                     <figure class="image is-64x64">
                         <img src="https://bulma.io/images/placeholders/128x128.png" alt="Image">
@@ -100,7 +99,6 @@
                     </div>
                 </div>
             </article>
-        </div>
     </div>
 </section>
 {% endblock %}
