F*** git stashes. Did some clean up. 死にたい

--- a/templates/auth/signup.html
+++ b/templates/auth/signup.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block scripts %}
-    <script defer src="/js/signup.js"></script>
+    <script defer src="/js/interface/signup.js"></script>
 {% endblock %}
 
 {% block content %}
