--- a/templates/baseAdmin.html
+++ b/templates/baseAdmin.html
@@ -6,8 +6,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tourisit - Tours by locals.</title>
-        <link rel="stylesheet" href="/css/bulma.min.css">
-        <link rel="stylesheet" href="/css/navbar.css">
+        <link rel="stylesheet" href="/css/frameworks/bulma.min.css">
+        <link rel="stylesheet" href="/css/global/navbar.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
               integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
               crossorigin="anonymous"/>
