--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block scripts %}
-<link rel="stylesheet" href="/css/chat.css" />
-<link rel="stylesheet" href="/css/shop.css" />
-<link rel="stylesheet" href="/css/bulma-divider.css" />
+<link rel="stylesheet" href="/css/pages/chat.css" />
+<link rel="stylesheet" href="/css/global/shop.css" />
+<link rel="stylesheet" href="/css/frameworks/bulma-divider.css" />
 {% endblock %}
 
 {% block content %}
