--- a/templates/customer/allBookings.html
+++ b/templates/customer/allBookings.html
@@ -5,8 +5,8 @@
 
 
 {% block scripts %}
-    <link rel="stylesheet" href="/css/shop.css">
-    <link rel="stylesheet" href="/css/all_bookings.css">
+    <link rel="stylesheet" href="/css/global/shop.css">
+    <link rel="stylesheet" href="/css/pages/all_bookings.css">
 {% endblock %}
 
 
