--- a/templates/customer/book-now.html
+++ b/templates/customer/book-now.html
@@ -3,8 +3,8 @@
 {% block title %}Tourisit - Tours By Locals {% endblock %}
 
 {% block scripts %}
-    <link rel="stylesheet" href="/css/shop.css">
-    <link rel="stylesheet" href="/css/bulma-divider.css">
+    <link rel="stylesheet" href="/css/global/shop.css">
+    <link rel="stylesheet" href="/css/frameworks/bulma-divider.css">
 {% endblock %}
 
 
