--- a/templates/customer/booking.html
+++ b/templates/customer/booking.html
@@ -3,12 +3,12 @@
 {% block title %}Tourisit - Tours By Locals {% endblock %}
 
 {% block scripts %}
-    <link rel="stylesheet" href="/css/shop.css">
-    <link rel="stylesheet" href="/css/bulma-timeline.min.css">
-    <link rel="stylesheet" href="/css/bulma-steps.css">
-    <link rel="stylesheet" href="/css/chat.css">
-    <link rel="stylesheet" href="/css/bulma-badge.css">
-    <link rel="stylesheet" href="/css/all_bookings.css">
+    <link rel="stylesheet" href="/css/global/shop.css">
+    <link rel="stylesheet" href="/css/frameworks/bulma-timeline.min.css">
+    <link rel="stylesheet" href="/css/frameworks/bulma-steps.css">
+    <link rel="stylesheet" href="/css/pages/chat.css">
+    <link rel="stylesheet" href="/css/frameworks/bulma-badge.css">
+    <link rel="stylesheet" href="/css/pages/all_bookings.css">
 {% endblock %}
 
 {% block content %}
