--- a/templates/customer/review.html
+++ b/templates/customer/review.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block scripts %}
-    <link rel="stylesheet" href="../../public/css/shop.css">
-    <link rel="stylesheet" href="../../public/css/rating.css">
-    <script src="js/jquery.raty.js"></script>
+    <link rel="stylesheet" href="../../public/css/global/shop.css">
+    <link rel="stylesheet" href="../../public/css/global/rating.css">
+    <script src="/js/jquery.raty.js"></script>
 {% endblock %}
 
 {% block content %}
