--- a/templates/customer/tourListing.html
+++ b/templates/customer/tourListing.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block scripts %}
-<link rel="stylesheet" href="/css/shop.css">
-<link rel="stylesheet" href="/css/tourlisting.css">
-<link rel='stylesheet' href='/css/bulma-timeline.min.css'>
+<link rel="stylesheet" href="/css/global/shop.css">
+<link rel="stylesheet" href="/css/pages/tourlisting.css">
+<link rel='stylesheet' href='/css/frameworks/bulma-timeline.min.css'>
 {% endblock %}
 
 {% block content %}
