--- a/templates/tourGuides/allBusinesses.html
+++ b/templates/tourGuides/allBusinesses.html
@@ -4,7 +4,7 @@
 
 
 {% block scripts %}
-    <link rel="stylesheet" href="/css/shop.css">
+    <link rel="stylesheet" href="/css/global/shop.css">
     <link rel="stylesheet" href="/css/all_bookings.css">
 {% endblock %}
 
