--- a/templates/tourGuides/business.html
+++ b/templates/tourGuides/business.html
@@ -3,7 +3,7 @@
 {% block title %}Tourisit - Tours By Locals {% endblock %}
 
 {% block scripts %}
-    <link rel="stylesheet" href="/css/shop.css">
+    <link rel="stylesheet" href="/css/global/shop.css">
     <link rel="stylesheet" href="/css/bulma-timeline.min.css">
     <link rel="stylesheet" href="/css/bulma-steps.css">
     <link rel="stylesheet" href="/css/chat.css">
