--- a/templates/customer/favourites.html
+++ b/templates/customer/favourites.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block scripts %}
-    <link rel="stylesheet" href="/css/shop.css">
+    <link rel="stylesheet" href="/css/global/shop.css">
 {% endblock %}
 
 
