--- a/templates/customer/marketplace.html
+++ b/templates/customer/marketplace.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
 {% block scripts %}
-    <link rel="stylesheet" href="/css/shop.css">
-    <link rel="stylesheet" href="/css/discover.css">
+    <link rel="stylesheet" href="/css/global/shop.css">
+    <link rel="stylesheet" href="/css/pages/discover.css">
     <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script>
 
