--- a/templates/internal/users.html
+++ b/templates/internal/users.html
@@ -1,9 +1,9 @@
 {% extends 'baseAdmin.html' %}
 
 {% block scripts %}
-    <!--<link rel="stylesheet" href="/css/shop.css">-->
-    <link rel="stylesheet" href="/css/navbar.css">
-    <link rel="stylesheet" href="/css/admin.css">
+    <!--<link rel="stylesheet" href="/css/global/shop.css">-->
+    <link rel="stylesheet" href="/css/global/navbar.css">
+    <link rel="stylesheet" href="/css/dashboards/admin.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"
             integrity="sha512-d9xgZrVZpmmQlfonhQUvTR7lMPtO7NkZMkA0ABN3PHCbKA5nqylQ/yWlFAyY6hYgdF1Qh6nYiuADWwKB4C2WSw=="
             crossorigin="anonymous"></script>
