--- a/templates/tourGuides/dashboard.html
+++ b/templates/tourGuides/dashboard.html
@@ -1,8 +1,8 @@
 {% extends 'baseTour.html' %}
 
 {% block scripts %}
-    <!--<link rel="stylesheet" href="/css/shop.css">-->
-    <link rel="stylesheet" href="/css/navbar.css">
+    <!--<link rel="stylesheet" href="/css/global/shop.css">-->
+    <link rel="stylesheet" href="/css/global/navbar.css">
     <link rel="stylesheet" href="/css/workdesk.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"
             integrity="sha512-d9xgZrVZpmmQlfonhQUvTR7lMPtO7NkZMkA0ABN3PHCbKA5nqylQ/yWlFAyY6hYgdF1Qh6nYiuADWwKB4C2WSw=="
