--- a/templates/customer/index-customer.html
+++ b/templates/customer/index-customer.html
@@ -20,20 +20,20 @@
 
     <section class="section">
         <div class="container">
-            <div class="box p-6">
+            <!-- <div class="box p-6"> -->
             <h2 class="title">Recent listings</h2>
 
-            <div class="columns is-multiline">
+                <div class="columns is-multiline">
+
+                    {% for item in item_list %}
+
+                            {% include 'components/listing-card-home.html' %}
+
+                    {% endfor %}
+                </div>
                 
-                {% for item in listings %}
-                    {% if loop.index <=6 %}
 
-                        {% include 'components/listing-card.html' %}
-
-                    {% endif %}
-                {% endfor %}
-            </div>
+            <!-- </div> -->
         </div>
-    </div>
     </section>
 {% endblock %}
