--- a/templates/customer/marketplace.html
+++ b/templates/customer/marketplace.html
@@ -1,114 +1,22 @@
 {% extends 'base.html' %}
 
 {% block scripts %}
-    <link rel="stylesheet" href="/css/global/shop.css">
-    <link rel="stylesheet" href="/css/pages/discover.css">
-    <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script>
-
-        function generateListing(listing) {
-            var listingTemplate =
-                `
-                    <a href='/discover/${listing['_id']}'>
-                        <div class='p-5 vertical listing-card'>
-                            <div class="box listing-img"
-                                style="background-image: url('data:image/jpeg;base64,${listing['tour_img']}') ;"></div>
-                                <div class="ml-4">
-                                    <div class="mb-2 listing-author">
-                                        <div class="profile-img" style="background-image: url('data:image/jpeg;base64, ${listing['tg_img'] }') ;"></div>
-                                        <div class="ml-2"><b>${listing['tg_name']}</b> is offering:</div>
-                                    </div>
-                                    <h1 class='title is-4'>${listing['tour_name']}</h1>
-                                    <p class="subtitle is-6 listing-card-text">${listing['tour_desc']}</p>
-                                    <p class="has-text-weight-light is-size-3 has-text-dark"><small
-                                            class="is-size-5">From</small>
-                                            $${listing['tour_price']}.0
-                                    </p>
-                                    <br>
-                                </div>
-                                <div class="buttons">
-                                    <a class="button is-white" style="color:rgb(73, 27, 35)"
-                                    href={{ url_for('favourites') }}><i
-                                            class="fas fa-heart"></i>&ensp;Add
-                                        to wishlist</a>
-                                    <a class="button is-white has-text-primary" href='/discover/${listing['_id']}/booknow'><i
-                                            class="fas fa-arrow-right"></i>&ensp;Book now</a>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-            `
-            return listingTemplate
-        }
-
-        function liveSearch(value) {
-            value = value.trim(); // remove any spaces around the text
-            if (value != "") { // don't make requests with an empty string
-                $.ajax({
-                    url: "/search",
-                    data: {searchListing: value},
-                    dataType: "json",
-                    success: (data) => {
-
-                        if (data.results.length > 0) {
-                            var res = "";
-                            for (i in data.results) {
-                                console.log(data.results[i]['_id'].replace(/"/g, ''))
-                                data.results[i]['_id'] = data.results[i]['_id'].replace(/"/g, '')
-                                listing = generateListing(data.results[i])
-                                res += "<div class='column is-one-third'>" + listing + "</div>";
-                            }
-                            $("#displayListings").html(res);
-                        } else {
-                            $("#displayListings").html('<h1>Cannot find!</h1>')
-                        }
-                    }
-
-                });
+<link rel="stylesheet" href="/css/global/shop.css">
+<link rel="stylesheet" href="/css/pages/discover.css">
+<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script>
+    receiveSearch = (query) => {
+        $.ajax({
+            url: `/endpoint/search?query=${query}`,
+            dataType: "json",
+            success: (data) => {
+                console.log('Retrieving search query')
+                incomingSearchResults = data.data
+                $('#displayListings').html(incomingSearchResults)
             }
-            // Else if there is nothing searched for, then return everything 
-            else {
-                defaultShow =
-                    `
-                {% for item in listings|reverse %}
-                    <div class="column is-one-third">
-                        <a href='/discover/{{ item["_id"] }}'>
-                            <div class='p-5 vertical listing-card'>
-                                <div class="box listing-img"
-                                     style="background-image: url('data:image/jpeg;base64, {{ item['tour_img'] }}') ;"></div>
-                                <div class="ml-4">
-                                    <div class="mb-2 listing-author">
-                                        <div class="profile-img" style="background-image: url('data:image/jpeg;base64, {{ item['tg_img'] }}') ;"></div>
-                                        <div class="ml-2"><b>{{ item['tg_name'] }}</b> is offering:</div>
-                                    </div>
-                                    <h1 class='title is-4'>{{ item.tour_name }}</h1>
-                                    <p class="subtitle is-6 listing-card-text">{{ item.tour_desc }}</p>
-                                    <p class="has-text-weight-light is-size-3 has-text-dark"><small
-                                            class="is-size-5">From</small>
-                                        ${{ item['tour_price'] }}
-                                    </p>
-                                    <br>
-                                </div>
-                                <div class="buttons">
-                                    <a class="button is-white" style="color:rgb(73, 27, 35)"
-                                       href={{ url_for('favourites') }}><i
-                                            class="fas fa-heart"></i>&ensp;Add
-                                        to wishlist</a>
-                                    <a class="button is-white has-text-primary" href='/discover/{{ item["_id"] }}/booknow'><i
-                                            class="fas fa-arrow-right"></i>&ensp;Book
-                                        now</a>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                {% endfor %}
-                `
-                $("#displayListings").html(defaultShow)
-            }
-        }
-
-
-    </script>
+        })
+    }
+</script>
 {% endblock %}
 
 {% block content %}
@@ -123,112 +31,82 @@
         </h2>
 
         <div class="box searchbar-container" style="margin: 0 8rem;">
-                <div class="field has-addons">
-                    <div class="control is-expanded">
-                        <input id="searchReq" class="input is-fullwidth" type="text" placeholder="Look for a tour"
-                               onkeyup="liveSearch(this.value)">
-                    </div>
-                    <div class="control">
-                        <button class="button is-danger">
-                            Search
-                        </button>
-                        <button class="button is-danger">
-                            <i class="fas fa-dice"></i>
-                        </button>
+            <div class="field has-addons">
+                <div class="control is-expanded">
+
+                    <div class="field">
+                        <p class="control has-icons-left has-icons-right">
+                            <input id="searchReq" class="input is-fullwidth" type="text" placeholder="Look for a tour"
+                                onchange="receiveSearch(this.value)">
+                            <span class="icon is-small is-left">
+                                <i class="fas fa-search"></i>
+                            </span>
+                        </p>
                     </div>
                 </div>
+                <div class="control">
+                    <button class="button is-danger">
+                        <i class="fas fa-dice"></i>
+                    </button>
+                </div>
+            </div>
         </div>
     </div>
 </section>
 
-    <!-- <section id="discover-hero" class="hero is-medium is-black">
-        <div class="hero-body">
-            <div class="container has-text-centered">
-                <h1 class="title has-text-weight-bold" style="font-size: 3rem;">
-                    Discover
-                </h1>
-                <h2 class="subtitle is-size-4">
-                    There's always a trip for everyone
-                </h2>
-            </div>
-            <br>
-            <div class="searchbar">
-                <div class="field has-addons">
-                    <div class="control is-expanded">
-                        <input id="searchReq" class="input is-fullwidth" type="text" placeholder="Look for a tour"
-                               onkeyup="liveSearch(this.value)">
-                    </div>
-                    <div class="control">
-                        <button class="button is-danger">
-                            Search
-                        </button>
-                        <button class="button is-danger">
-                            <i class="fas fa-dice"></i>
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div> 
-
-    </section>-->
-
-    <section class='section'>
-        <div class='container'>
-            <div class="dropdown is-hoverable is-pulled-right">
-                <div class="dropdown-trigger">
-                    <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
-                        <span>Filter By:</span>
-                        <span class="icon is-small">
+<section class='section'>
+    <div class='container'>
+        <div class="dropdown is-hoverable is-pulled-right">
+            <div class="dropdown-trigger">
+                <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
+                    <span>Filter By:</span>
+                    <span class="icon is-small">
                         <i class="fas fa-angle-down" aria-hidden="true"></i>
                     </span>
-                    </button>
-                </div>
-                <div class="dropdown-menu" id="dropdown-menu" role="menu">
-                    <div class="dropdown-content">
-                        <a href="#" class="dropdown-item">
-                            Highest Relevance
-                        </a>
-                        <a href="#" class="dropdown-item">
-                            Highest Rating
-                        </a>
-                        <a href="#" class="dropdown-item">
-                            Newest Listings
-                        </a>
-                        <a class="dropdown-item">
-                            Closest Proximity
-                        </a>
-                        <a href="#" class="dropdown-item">
-                            Lowest to Highest Price
-                        </a>
-                        <a class="dropdown-item">
-                            Highest to Lowest Price
-                        </a>
+                </button>
+            </div>
+            <div class="dropdown-menu" id="dropdown-menu" role="menu">
+                <div class="dropdown-content">
+                    <a href="#" class="dropdown-item">
+                        Highest Relevance
+                    </a>
+                    <a href="#" class="dropdown-item">
+                        Highest Rating
+                    </a>
+                    <a href="#" class="dropdown-item">
+                        Newest Listings
+                    </a>
+                    <a class="dropdown-item">
+                        Closest Proximity
+                    </a>
+                    <a href="#" class="dropdown-item">
+                        Lowest to Highest Price
+                    </a>
+                    <a class="dropdown-item">
+                        Highest to Lowest Price
+                    </a>
 
-                    </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
 
 
-    <section class="section">
-        <div class="container">
-
-            <div class="section">
-                <div class="has-text-info" id="results"></div>
-            </div>
-
+<section class="section">
+    <div class="container">
+        <div class="box">
             <div class="columns is-multiline" id='displayListings'>
-
+                {% include 'components/listing-card.html' %}
             </div>
-
         </div>
-    </section>
+    </div>
+</section>
 
-    <script>
+<!-- <script>
         window.onload = liveSearch('')
-    </script>
+    </script> -->
 
 
 {% endblock %}
