Treat blank searches as wildcards

--- a/templates/customer/marketplace.html
+++ b/templates/customer/marketplace.html
@@ -37,7 +37,7 @@
                     <div class="field">
                         <p class="control has-icons-left has-icons-right">
                             <input id="searchReq" class="input is-fullwidth" type="text" placeholder="Look for a tour"
-                                onchange="receiveSearch(this.value)">
+                                onkeyup="receiveSearch(this.value)">
                             <span class="icon is-small is-left">
                                 <i class="fas fa-search"></i>
                             </span>
