--- a/public/css/pages/support.css
+++ b/public/css/pages/support.css
@@ -3,14 +3,10 @@
 }
 
 #hero-content {
-    background: url("/imgs/index.jpg") center scroll no-repeat;
+    background: url("/imgs/support.jpg") center scroll no-repeat;
     background-size: cover;
     background-color: rgba(0, 0, 0, 0.4);
     background-blend-mode: overlay;
-    padding: 9rem 0;
+    padding: 5rem 0;
     text-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
 }
-
-/* .skyline-bg {
-    background-image: url('../imgs/bg/skyline-bg.jpg');
-} */
